--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,18 @@
     transform: rotateX(25deg) translateZ(-2500px);
   }
 }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
+}
